# ResearchMind-AI

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AI_ENGINEERING_AUDIT.md  CHANGELOG.md  DEV_GUIDE.md  FILES.md  PROJECT_STATUS.md  README.md  RESEARCHMIND_PROJECT_CONTEXT_AND_HANDOFF.md  ROADMAP.md  Research Runtime.md  ResearchMind-Roadmap-v2.md  STRUCTURE.md  artifacts_platform_prd.md  context_platform_complexion_prd.md  docker-compose.yml  evaluation_platform_prd.md  generation_platform_complexion_prd.md  generation_runtime_platform_prd.md  guardrail_integration_prd.md  guardrails_platform_prd.md  langchain-compression-prd.md  memory_platform_optimization_plan.md  memory_platform_prd.md  oberservability_platform_prd.md  phase-3-ai-runtime-roadmap.md  prompt_guardrails.md  pyproject.toml  research_api_prd.md  researchmind_research_runtime_implementation_plan.md  routing_platform_prd.md  runtime_caching_platform_prd.md  runtime_validation_prd.md  setup_commands.md  streaming_platform_prd.md  test.txt  validation_platform_prd.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1b6e40f3a754_split_document_status_into_upload_.py  37117c83beb2_create_research_sessions_table.py  43dc35ceb875_debug.py  9ab1f891554a_create_memories_table.py  a1b2c3d4e5f6_create_generation_usage_table.py  a97b3b8eee9f_create_documents_table.py  bca5e4edca5c_create_conversations_and_messages_tables.py  cfd2f848f25b_create_research_conversations_table.py  d9e2f4a6b8c0_add_conversation_history_compaction.py  f0e1d2c3b4a5_add_conversation_title_generation_lease.py
apps/api/app/: main.py
apps/api/app/auth/: jwt.py  (+1 more)
apps/web/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/worker/: main.py  metrics.py  processing_worker.py
benchmarks/: README.md  factory.py  registry.py  runner.py
benchmarks/chunking/: benchmark.py  report_generator.py
benchmarks/common/: dataset_loader.py  git_info.py  metrics.py  report_generator.py  timer.py
benchmarks/datasets/: README.md
benchmarks/datasets/research-papers/: generation_queries.json  retrieval_queries.json
benchmarks/embeddings/: benchmark.py  report_generator.py
benchmarks/generation/: benchmark.py  dataset.py  metrics.py
benchmarks/interfaces/: benchmark.py
benchmarks/models/: report.py
benchmarks/pipeline/: benchmark.py  dataset.py  models.py  pipeline_runner.py  report_generator.py  services.py  stats.py
benchmarks/regression/: detector.py  models.py  report_generator.py  thresholds.py
benchmarks/reports/: ingestion-benchmark-report.md  ingestion-benchmark.json
benchmarks/reports/embeddings/: report.json  report.md
benchmarks/reranking/: benchmark.py
benchmarks/retrieval/: benchmark.py  dataset.py  indexer.py  metadata_filtering_benchmark.py  metrics.py
docs/: README.md  index.md  phase2_roadmap.md  project-constitution.md  project-handbook.md  s3_configuration_guide.md
docs/adrs/: ADR-001-monorepo.md  ADR-002-fastapi.md  ADR-003-fastapi-lifespan.md  ADR-004-application-state.md  ADR-005-api-contracts.md  ADR-006-settings-vs-constants.md  ADR-007-middleware-registration.md  ADR-008-typed-api-schemas.md  ADR-009-identity-architecture  ADR-010-document-processing-strategy.md  ADR-011-queue-abstraction.md  ADR-012-asynchronous-document-processing.md  ADR-013-canonical-chunk-model.md  ADR-014-chunking-provider-architecture.md  ADR-015-canonical-ai-platform-pipeline.md  ADR-016-observability-platform.md  ADR-017-vector-store-platform.md  ADR-018-knowledge-indexing-and-retrieval-architecture.md  ADR-019-qdrant-native-hybrid-retrieval.md  ADR-020-retrieval-evaluation-first-development.md  ADR-021-hybrid-retrieval-architecture.md  ADR-022-reranking-platform.md  ADR-023-framework-integration-strategy.md  ADR-024-generation-model-strategy.md  ADR-025-platform-roadmap.md  ADR-026-model-routing-platform.md  ADR-027-runtime-caching-platform.md  ADR-028-streaming-platform.md  ADR-029-cost-aware-memory-promotion.md  ADR-030-chat-history-pagination-and-context-compaction.md  README.md
docs/api/: README.md  backend-api.md
docs/architecture/: README.md  ai-framework-integration.md  backend-architecture.md  chunk-lifecycle-and-dataflow.md  chunking-platform-architecture.md  chunking-platform.md  context-platform.md  context-security.md  db-sessions.md  decision-history.md  embedding-platform.md  evaluation-platform.md  evaluation-strategy.md  experimentation-platform.md  framework-integration-strategy.md  hybrid-retrieval-indexing.md  identity-architecture.md  knowledge-platform-roadmap.md  memory-platform.md  metadata-filtering.md  model-routing-platform.md  observability-platform.md  observability-strategy.md  project-constitution.md  prompt-formatter-strategies.md  prompt-platform.md  prompting-architecture.md  repository-structure.md  reranking-platform.md  retrieval-benchmarking-strategy.md  runtime-caching-platform.md  security-roadmap.md  streaming-platform.md  structured-output-platform.md  system-overview.md
docs/deployment/: README.md  local.md  production.md
docs/diagrams/: ResearchMind.drawio.xml
docs/engineering-journal/: README.md  template.md
docs/evaluation/: strategy.md
docs/guides/: testing.md
docs/handoff/: CHATGPT_HANDOFF_PHASE_2_2.md  chat-handoff1.md  chat-handoff2.md
docs/monitoring/: langsmith.md
docs/project/: 00-project-constitution.md  01-current-state.md  02-roadmap.md  03-frozen-decisions.md  04-folder-structure.md  05-tech-stack.md  06-chatgpt-collaboration.md  07-engineering-journal.md
docs/roadmap/: observability-platform-roadmap.md
docs/runbooks/: README.md  local-development.md  troubleshooting.md
docs/standards/: README.md  documentation.md
infrastructure/: s3_configuration_guide.md
scripts/: benchmark_chunking.py  dev.sh  verify_voyage_sdk.py
tests/: conftest.py
tests/api/: test_health.py  test_retrieval_filters.py
tests/integration/: test_document_repository.py  test_research_repository.py  test_user_repository.py  test_user_service.py
tests/unit/: test_settings.py
(+906 files in other folders)
