[project]
name = "researchmind"
version = "0.1.0"
description = "Production-grade AI Research & Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.43.36",
    "botocore>=1.43.36",
    "cryptography>=49.0.0",
    "docling>=2.107.0",
    "fastapi>=0.138.0",
    "greenlet>=3.5.2",
    "httpx>=0.28.1",
    "orjson>=3.11.9",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "boto3-stubs[s3]>=1.43.36",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

ignore = ["UP046","B008",]

[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = ["test_*.py"]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

addopts = [
    "--strict-markers",
    "--cov=apps",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
exclude = "^alembic/"

[tool.coverage.run]
source = ["apps"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.uv]

package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/app"]
