[project]
name = "researchmind"
version = "0.1.0"
description = "Production-grade AI Research & Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.116.0",
    "asyncpg>=0.31.0",
    "boto3>=1.43.36",
    "botocore>=1.43.36",
    "cryptography>=49.0.0",
    "docling>=2.107.0",
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "google-genai>=2.11.0",
    "greenlet>=3.5.2",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "langchain>=1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-redis>=0.2.5",
    "langchain-text-splitters==1.1.2",
    "langdetect>=1.0.9",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "orjson>=3.11.9",
    "psutil>=7.2.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis>=5.0.1,<8.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
    "voyageai>=0.4.1",
    "xmltodict>=1.0.4",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "boto3-stubs[s3]>=1.43.36",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
    "types-jsonschema>=4.26.0.20260518",
    "types-psutil>=7.2.2.20260518",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

ignore = ["UP046","B008",]

[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = ["test_*.py"]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

addopts = [
    "--strict-markers",
    "--cov=apps",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
mypy_path = ["apps/api", "."]
explicit_package_bases = true

warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
exclude = "^alembic/"

[[tool.mypy.overrides]]
module = "langdetect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xmltodict.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["apps"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.uv]

package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/app"]
